scrollbar fix

--- a/public/css/main/dashboard.css
+++ b/public/css/main/dashboard.css
@@ -162,4 +162,5 @@ a.side-menu-link {
     background-color: #101313;
     color: #eee7dc;
     overflow-y: auto;
+    scrollbar-gutter: stable;
 }
